--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.pythonPath": "/home/varao/.envs/dino/bin/python"
+  "python.pythonPath": "/home/varao/.envs/dino/bin/python",
+  "python.linting.enabled": false
 }
